<resources>
    <string name="app_name">GAlarm android2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_silientmode">Silent mode</string>
    <string name="menu_history">History</string>
    <string name="menu_alarms">Alarms</string>
    <string name="menu_share">Share application</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_about">About</string>
</resources>
