<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_alerts"
            android:icon="@drawable/ic_alert"
            android:title="@string/menu_alarms" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback"
                android:title="@string/menu_feedback" />
        </menu>
    </item>

    <item android:title="Share">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
        </menu>
    </item>


</menu>
